# gert

./: .editorconfig  .gitignore  AGENTS.md  BUILD_LOG.md  CLAUDE.md  Directory.Build.props  Gert.sln  IMPROVEMENTS.md  Makefile  README.md  SECURITY-AUDIT.md  refactor-meai.md  refactor.md  uistyle.html
.claude/: settings.json
.config/: dotnet-tools.json
.github/workflows/: ci.yml  pages.yml
Gert.Api/: Gert.Api.csproj  Program.cs  appsettings.json
Gert.Api/Chat/: ChannelTurnQueue.cs
Gert.Api/Contracts/: DocumentResponse.cs  ThreadMessage.cs
Gert.Api/Controllers/: ArtifactsController.cs  ConversationEventsController.cs  ConversationsController.cs  DocumentsController.cs  MemoryController.cs  MessagesController.cs  ModelsController.cs  ProjectsController.cs  SettingsController.cs
Gert.Api/Errors/: GertProblem.cs  ValidationExceptionHandler.cs
Gert.Api/Ingestion/: ChannelIngestionQueue.cs
Gert.Authentication/: Gert.Authentication.csproj  GertJwtAuthExtensions.cs  HttpUserContext.cs  ISubDenylist.cs
Gert.Console/: ConsoleApp.cs  ConsoleHostBuilder.cs  Gert.Console.csproj  Program.cs
Gert.Database/: FileSystemUserStore.cs  Gert.Database.csproj  LocalObjectStore.cs  StorageOptions.cs  UnauthorizedDatabaseIdentityException.cs  UnauthorizedIdentityException.cs  UserMeta.cs  UserPaths.cs
Gert.Database.Sqlite/: FileSystemUserStore.cs  Gert.Database.Sqlite.csproj  IdentityBindingException.cs  LocalObjectStore.cs  ProvisioningExceptions.cs  SqliteChatRepository.cs  SqliteDatabasePaths.cs  SqliteDatabaseProvider.cs  SqliteHandleReleaser.cs  SqliteMigrationRunner.cs  SqliteRagRepository.cs  StorageOptions.cs  UnauthorizedIdentityException.cs  UserMeta.cs  UserPaths.cs
Gert.External/: Gert.External.csproj  ServiceCollectionExtensions.cs
Gert.Model/: ArtifactKind.cs  DocumentKind.cs  Enums.cs  ModelInfo.cs
Gert.Service/: AssemblyMarker.cs  Gert.Service.csproj  GertServices.cs  IGertServices.cs  ServiceCollectionExtensions.cs
Gert.Storage/: Gert.Storage.csproj
deploy/: README.md
docs/: README.md
docs/design/: auth.md  (+22 more)
site/: index.html  styles.css  theme.js
tests/: Directory.Build.props
tools/: __init__.py  check_links.py
tools/monty/: README.md  app.py  pyproject.toml
tools/smoke/: README.md  __init__.py  pages.py  proxy.py  pyproject.toml  requirements.txt  run.py  shots.py  tokens.py
tools/smoke/mocks/: __init__.py  __main__.py  monty.py  searxng.py  specs.py  vllm.py
tools/smoke/tests/: conftest.py  test_a11y.py  test_auth_smoke.py  test_canvas.py  test_chat.py  test_chrome.py  test_components.py  test_embeddings_conformance.py  test_knowledge.py  test_llm_tools.py  test_rbac.py  test_style.py
(+1538 files in other folders)
